--- a/idn/v3/paths/sod-all-report-run.yaml
+++ b/idn/v3/paths/sod-all-report-run.yaml
@@ -3,7 +3,7 @@ post:
     - UserContextAuth: [idn:sod-violation:write]
   operationId: startSodAllPoliciesForOrg
   tags:
-    - SOD Policy
+    - SOD Policies
   summary: Runs all policies for org
   description: >-
     Runs multi-policy report for the org. If a policy reports more than 5000 violations, the report mentions that the violation limit was exceeded for that policy.
@@ -13,33 +13,36 @@ post:
     content:
       application/json:
         schema:
-          $ref: '../schemas/MultiPolicyRequest.yaml'
-        example: {
-          "filteredPolicyList": [
-            "b868cd40-ffa4-4337-9c07-1a51846cfa94",
-            "63a07a7b-39a4-48aa-956d-50c827deba2a"
-          ]
-        }
+          $ref: "../schemas/MultiPolicyRequest.yaml"
+        example:
+          {
+            "filteredPolicyList":
+              [
+                "b868cd40-ffa4-4337-9c07-1a51846cfa94",
+                "63a07a7b-39a4-48aa-956d-50c827deba2a",
+              ],
+          }
   responses:
-    '200':
+    "200":
       description: Reference to the violation report run task.
       content:
         application/json:
           schema:
-            $ref: '../schemas/ReportResultReference.yaml'
-          example: {
-            "status": "PENDING",
-            "type": "REPORT_RESULT",
-            "id": "37b3b32a-f394-46f8-acad-b5223969fa68",
-            "name": "Multi Query Report"
-          }
-    '400':
-      $ref: '../responses/400.yaml'
-    '401':
-      $ref: '../responses/401.yaml'
-    '403':
-      $ref: '../responses/403.yaml'
-    '429':
-      $ref: '../responses/429.yaml'
-    '500':
-      $ref: '../responses/500.yaml'
+            $ref: "../schemas/ReportResultReference.yaml"
+          example:
+            {
+              "status": "PENDING",
+              "type": "REPORT_RESULT",
+              "id": "37b3b32a-f394-46f8-acad-b5223969fa68",
+              "name": "Multi Query Report",
+            }
+    "400":
+      $ref: "../responses/400.yaml"
+    "401":
+      $ref: "../responses/401.yaml"
+    "403":
+      $ref: "../responses/403.yaml"
+    "429":
+      $ref: "../responses/429.yaml"
+    "500":
+      $ref: "../responses/500.yaml"
